--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
   <section class="main">
     <div class="container">
       <!-- Carousel -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-12">
-          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap-->
+          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap--> -->
             <!-- Indicadores de posicion -->
-            <ol class="carousel-indicators">
+            <!-- <ol class="carousel-indicators">
               <li data-target="#slider" data-slide-to="0" class="active"></li>
               <li data-target="#slider" data-slide-to="1"></li>
               <li data-target="#slider" data-slide-to="2"></li>
-            </ol>
+            </ol> -->
 
             <!-- Contenedor de Sliders -->
-            <div class="carousel-inner" role="listbox">
+            <!-- <div class="carousel-inner" role="listbox">
               <div class="item active">
                 <img src="https://dummyimage.com/600x400/301/fff" alt="">
               </div>
@@ -95,10 +95,10 @@
               <div class="item">
                 <img src="https://dummyimage.com/600x400/603/fff" alt="">
               </div>
-            </div>
+            </div> -->
 
             <!-- Controles -->
-            <a href="#slider" class="left carousel-control" data-slide="prev">
+            <!-- <a href="#slider" class="left carousel-control" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left"></span>
               <span class="sr-only">Anterior</span>
             </a>
@@ -108,21 +108,20 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row ">
+      <!-- <div class="row ">
         <div class="col-md-12">
           <div class="page-header">
             <h1 class="text-center">Productos</h1>
           </div>
-        </div>
+        </div> -->
         <!-- Inicia la sección de imágenes fijas -->
         <!-- Primera fila (en modo de escritorio 2 imágenes) -->
-        <div class="row ">
+        <!-- <div class="row ">
           <div class="col-xs-12 col-sm-6 col-md-6 ">
-            <div class="thumbnail img1 img-responsive">
+            <div class="thumbnail  img-complete" id="img0">
               <a href="#">
-                <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
               </a>
               <div class="caption">
                 <h3 id="name0"></h3>
@@ -136,9 +135,8 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
-          <div class="thumbnail img2">
+          <div class="thumbnail img-complete"id="img1">
             <a href="#">
-              <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
             </a>
             <div class="caption">
               <h3 id="name1"></h3>
@@ -151,14 +149,13 @@
             </div>
           </div>
         </div>
-        </div>
+        </div> -->
 
         <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="thumbnail img3">
+            <div class="thumbnail img-complete" id="img2">
               <a href="#">
-                <!-- <img src="https://dummyimage.com/600x400/a72/fff" alt=""> -->
               </a>
               <div class="caption ">
                 <h3 id="name2"></h3>
@@ -173,9 +170,8 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-6">
-            <div class="thumbnail img4">
+            <div class="thumbnail img-complete" id="img3">
               <a href="#">
-                <!-- <img src="https://dummyimage.com/600x400/aa2/fff" alt=""> -->
               </a>
               <div class="caption ">
                 <h3 id="name3"></h3>
@@ -188,14 +184,13 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Tercera fila (en modo escritorio 1 imágen) -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="thumbnail img5">
+            <div class="thumbnail img-complete " id="img4">
               <a href="#">
-              <!-- <img src="https://dummyimage.com/1000x200/aa2/fff" alt=""> -->
               </a>
               <div class="caption">
                 <h3 id="name4"></h3>
@@ -208,19 +203,19 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <!--Cuarta fila (en modo de escritorio 4 imágenes)  -->
+        <!--Primera fila (en modo de escritorio 4 imágenes)  -->
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="thumbnail">
               <a href="#">
-                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+                <img id="img10"  alt="">
               </a>
               <div class="caption">
-                <h3 id="name5"></h3>
+                <h3 id="name10"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price5"></h2>
+                <h2 id="price10"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -230,14 +225,14 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="thumbnail" >
               <a href="#">
-                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+                <img id="img11"  alt="">
               </a>
               <div class="caption">
-                <h3 id="name6"></h3>
+                <h3 id="name11"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price6"></h2>
+                <h2 id="price11"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -247,14 +242,14 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="thumbnail" >
               <a href="#">
-                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+                <img id="img12"  alt="">
               </a>
               <div class="caption">
-                <h3 id="name7"></h3>
+                <h3 id="name12"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price7"></h2>
+                <h2 id="price12"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -264,14 +259,14 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="thumbnail">
+            <div class="thumbnail" >
               <a href="#">
-                <img src="https://dummyimage.com/600x400/52b/fff" alt="">
+                <img id="img13"  alt="">
               </a>
               <div class="caption">
-                <h3 id="name8"></h3>
+                <h3 id="name13"></h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <h2 id="price8"></h2>
+                <h2 id="price13"></h2>
                 <p>
                   <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
@@ -279,7 +274,154 @@
               </div>
             </div>
           </div>
+
+
         </div>
+        <!--Segunda fila (en modo de escritorio 4 imágenes)  -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img id="img14"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name14"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price14"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img15"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name15"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price15"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img16"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name16"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price16"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img17"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name17"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price17"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <!--Tercera fila (en modo de escritorio 4 imágenes)  -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail">
+              <a href="#">
+                <img id="img18"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name18"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price18"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img19"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name19"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price19"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img20"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name20"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price20"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="thumbnail" >
+              <a href="#">
+                <img id="img21"  alt="">
+              </a>
+              <div class="caption">
+                <h3 id="name21"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price21"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
       </div>
     </div>
   </section>
