--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>E-commerce L A B O R A T O R I A </title>
 </head>
 <body>
-<!-- todo  -->
+
   <header>
 		<nav class="navbar navbar-inverse navbar-static-top navbar-fixed-top">
 			<div class="container">
@@ -59,7 +59,7 @@
 							<button type="submit" class="btn btn-default" id="btn-search">Buscar</button>
 
               <a class="nav-link fa-2x" href="#">
-                <span id="checkout-cart"><i class="fas fa-shopping-cart"></i></span> <!--Imágen del carrito-->
+                <i class="fas fa-shopping-cart"></i> <!--Imágen del carrito-->
                 <span id="counterItems" class="badge badge-info">0</span><!--Contador-->
               </a>
 						</div>
@@ -68,10 +68,8 @@
 			</div>
 		</nav>
   </header>
-
   <!-- Inicia la página -->
   <section class="main">
-    <!-- Inicia Dani -->
     <div class="container-fluid" id="principal">
       <!-- Carousel -->
       <div class="row">
@@ -117,7 +115,7 @@
           <div class="item">
             <img src="./assets/images/house.jpg" alt="house">
           </div>
-        </div>
+</div>
             <!-- Controles -->
             <a href="#slider" class="left carousel-control" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left"></span>
@@ -223,12 +221,139 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container hidden">
+      <!-- Carousel -->
+      <!-- <div class="row">
+        <div class="col-md-12">
+          <div id="slider" class="carousel slide" data-ride="carousel"><!-- Estas clases son propias de bootstrap--> -->
+            <!-- Indicadores de posicion -->
+            <!-- <ol class="carousel-indicators">
+              <li data-target="#slider" data-slide-to="0" class="active"></li>
+              <li data-target="#slider" data-slide-to="1"></li>
+              <li data-target="#slider" data-slide-to="2"></li>
+            </ol> -->
 
-    <div class="container">
+            <!-- Contenedor de Sliders -->
+            <!-- <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://dummyimage.com/600x400/301/fff" alt="">
+              </div>
+              <div class="item">
+                <img src="https://dummyimage.com/600x400/643/fff" alt="">
+              </div>
+              <div class="item">
+                <img src="https://dummyimage.com/600x400/603/fff" alt="">
+              </div>
+            </div> -->
 
+            <!-- Controles -->
+            <!-- <a href="#slider" class="left carousel-control" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Anterior</span>
+            </a>
+            <a href="#slider" class="right carousel-control" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Siguiente</span>
+            </a>
+          </div>
+        </div>
+      </div> -->
 
-    <!-- Inicia Gaby -->
-    <!-- <div id="lista-articulos" class="container contenedor-busqueda"> -->
+      <!-- <div class="row ">
+        <div class="col-md-12">
+          <div class="page-header">
+            <h1 class="text-center">Productos</h1>
+          </div>
+        </div> -->
+        <!-- Inicia la sección de imágenes fijas -->
+        <!-- Primera fila (en modo de escritorio 2 imágenes) -->
+        <!-- <div class="row ">
+          <div class="col-xs-12 col-sm-6 col-md-6 ">
+            <div class="thumbnail  img-complete" id="img0">
+              <a href="#">
+              </a>
+              <div class="caption">
+                <h3 id="name0"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price0"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="thumbnail img-complete"id="img1">
+            <a href="#">
+            </a>
+            <div class="caption">
+              <h3 id="name1"></h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h2 id="price1"></h2>
+              <p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+                <a href="#" class="btn btn-default">Detalles</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        </div> -->
+
+        <!-- Segunda fila (en modo de escritorio 2 imágenes) -->
+        <!-- <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img-complete" id="img2">
+              <a href="#">
+              </a>
+              <div class="caption ">
+                <h3 id="name2"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price2"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="thumbnail img-complete" id="img3">
+              <a href="#">
+              </a>
+              <div class="caption ">
+                <h3 id="name3"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price3"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+        <!-- Tercera fila (en modo escritorio 1 imágen) -->
+        <!-- <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="thumbnail img-complete " id="img4">
+              <a href="#">
+              </a>
+              <div class="caption">
+                <h3 id="name4"></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <h2 id="price4"></h2>
+                <p>
+                  <a href="#" class="btn btn-primary">Comprar</a>
+                  <a href="#" class="btn btn-default">Detalles</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
         <!--Primera fila (en modo de escritorio 4 imágenes)  -->
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-3">
@@ -238,10 +363,10 @@
               </a>
               <div class="caption">
                 <h3 id="name10"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price10"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="10">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -255,10 +380,10 @@
               </a>
               <div class="caption">
                 <h3 id="name11"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price11"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="11">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -272,10 +397,10 @@
               </a>
               <div class="caption">
                 <h3 id="name12"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price12"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="12">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -289,10 +414,10 @@
               </a>
               <div class="caption">
                 <h3 id="name13"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price13"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="13">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -310,10 +435,10 @@
               </a>
               <div class="caption">
                 <h3 id="name14"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price14"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="14">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -327,10 +452,10 @@
               </a>
               <div class="caption">
                 <h3 id="name15"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price15"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="15">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -344,10 +469,10 @@
               </a>
               <div class="caption">
                 <h3 id="name16"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price16"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="16">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -361,10 +486,10 @@
               </a>
               <div class="caption">
                 <h3 id="name17"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price17"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="17">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -382,10 +507,10 @@
               </a>
               <div class="caption">
                 <h3 id="name18"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price18"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="18">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -399,15 +524,16 @@
               </a>
               <div class="caption">
                 <h3 id="name19"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price19"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="19">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
             </div>
           </div>
+
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="thumbnail" >
               <a href="#">
@@ -415,10 +541,10 @@
               </a>
               <div class="caption">
                 <h3 id="name20"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price20"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="20">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -432,10 +558,10 @@
               </a>
               <div class="caption">
                 <h3 id="name21"></h3>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <h2 id="price21"></h2>
                 <p>
-                  <a href="#" class="btn btn-primary comprar" data-id="21">Comprar</a>
+                  <a href="#" class="btn btn-primary">Comprar</a>
                   <a href="#" class="btn btn-default">Detalles</a>
                 </p>
               </div>
@@ -444,10 +570,9 @@
 
 
         </div>
+
+      </div>
     </div>
-    </div>
-    <!-- Contenedor resultado del carrito -->
-    <div class="container container-checkout"></div>
   </section>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
